--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="panel " 
                 style="background-image: url('https://i.pinimg.com/564x/e9/8e/c4/e98ec4ab29af29add33735b086255de2.jpg')">
-            <h3>floating Castle</h3>
+            <h3>Floating Castle</h3>
             </div>
             <div class="panel " 
                 style="background-image: url('https://i.pinimg.com/564x/bc/3a/49/bc3a499180099f38b11702bef16bb7cc.jpg')">
