Another spelling update
Small fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="panel " 
                 style="background-image: url('https://i.pinimg.com/564x/5a/6d/c2/5a6dc2282da669be6d0dcfc2a94a4709.jpg')">
-            <h3>tiny Tower</h3>
+            <h3>Tiny Tower</h3>
             </div>
         </div>
         <script src="script.js"></script>
